--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <section id="about" class="about">
     <h2>About Me</h2>
     <p>
-      Hi, my name's Grace, and I have a passion for scripting in various languages like Lua, JS, Python, AHK, and a bit of HTML. I take scripting commissions for any of those languages and complete them all within a week. I aim to make a lasting impression on every project I undertake.
+      Hi, my name's Grace, and I have a passion for scripting in various languages like Lua, JS, Python, AHK, and a bit of HTML. I have over 3+ years of experience and i take scripting commissions for any of those languages and complete them all within a week. I aim to make a lasting impression on every project I undertake.
     </p>
   </section>
 
