--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>freaky grace</title>
   <style>
     /* Import fonts and reset basic styles */
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
@@ -192,15 +192,15 @@
 
   <section id="home" class="hero">
     <h1>Welcome to My Portfolio</h1>
-    <p>Portfolio created by the one and only debrainers!!</p>
+    <p>A Portfolio to show off my progress i guess?!</p>
     <!-- Link to Guns.lol -->
-    <p>Click on this for my <a href="https://guns.lol/debrainers" class="blue-link" target="_blank">Guns.lol</a>!</p>
+    <p>Click on <a href="https://guns.lol/debrainers" class="blue-link" target="_blank">THIS</a> for my guns.lol!</p>
   </section>
 
   <section id="about" class="about">
     <h2>About Me</h2>
     <p>
-      Hi, my name's Grace, and I have a passion for scripting in various languages like Lua, JS, Python, AHK, and a bit of HTML. I have over 3+ years of experience and i take scripting commissions for any of those languages and complete them all within a week. I aim to make a lasting impression on every project I undertake.
+      Hi, my name's Grace, and I have a passion for scripting in various languages like Lua u, JS, Python, AHK, and a bit of HTML. I have over 3+ years of experience and i take scripting commissions for any of those languages and complete them all within a week. I aim to make a lasting impression on every project I undertake.
     </p>
   </section>
 
@@ -218,7 +218,7 @@
       </div>
       <div class="card">
         <h3>Project 3</h3>
-        <p>Finding backdoors or exploits in various games and helping people fix them.</p>
+        <p>Making Cheats/Exploits for various games like  and Roblox. </p>
       </div>
     </div>
   </section>
@@ -227,8 +227,8 @@
     <h2>Contact Me</h2>
     <p>Feel free to reach out for collaborations or just to say hi!</p>
     <form id="contactForm">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Discord user" required>
+      <input type="text" name="name" placeholder="Your Name AND discord user" required>
+      <input type="email" name="email" placeholder="Your Email user" required>
       <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
       <button type="submit">Send Message</button>
     </form>
