--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
       <div class="card">
         <h3>Project 3</h3>
-        <p>Making Cheats/Exploits for various games like  and Roblox. </p>
+        <p>Making Cheats/Exploits for various games in Roblox. </p>
       </div>
     </div>
   </section>
